--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -23,6 +23,7 @@
             </intent-filter>
         </activity>
         <activity
+            android:screenOrientation="portrait"
             android:name="Game" 
             android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
         </activity>
