--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,5 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="nl.hro.minor.android.lettergame.jjs"
+    package="nl.hro.minor.android.games"
     android:versionCode="1"
     android:versionName="1.0" 
     android:installLocation="auto" >
@@ -14,7 +14,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".Main"
+            android:name="nl.hro.minor.android.games.Main"
             android:label="@string/title_activity_main" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,7 +24,7 @@
         </activity>
         <activity
             android:screenOrientation="portrait"
-            android:name="Game" 
+            android:name=".lettergame.Game" 
             android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
         </activity>
         
