Orientation based on device + black theme
Orientation is default in portrait, which suitable for most phones, but
it can detect tablets (by screensize), if a tablet is detected it will
use the landscape mode. If the detection is wrong it can still be
changed back via the menu.

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,13 +32,15 @@
             android:name=".pogo.GamePogo"
             android:label="@string/app_name"
             android:configChanges="orientation"
-            android:screenOrientation="landscape" >
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
         </activity>
         
         <activity android:name=".pogo.ScoreScreen"
             android:label="@string/app_name"
             android:configChanges="orientation"
-            android:screenOrientation="landscape">
+            android:screenOrientation="landscape"
+            android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
         </activity>
         
         <activity android:name=".differences.Game1" android:label="@string/app_name"> </activity>
